--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.77.0",
     "dayjs": "^1.11.18",
+    "idb": "^8.0.3",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
@@ -31,6 +32,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.1.0"
   }
 }
